--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
         <h2 class="fronttitre">Front end</h2>
         <article class="front">
             <div class="image">
-                <img class="logo1" src="/logo_html5.png" alt="logo1">
+                <img class="logo1" src="logo_html5.png" alt="logo1">
                 <p> en-cours</p>
             </div>
             <div class="image">
-                <img class="logo2" src="/CSS.png" alt="logo2">
+                <img class="logo2" src="CSS.png" alt="logo2">
                 <p> en-cours</p>
             </div>
             <div class="image">
-                <img class="logo3" src="/JavaScript.png" alt="logo3">
+                <img class="logo3" src="JavaScript.png" alt="logo3">
                 <p> planifier</p>
             </div>
             <div class="image">
-                <img class="logo4" src="/jQuery.png" alt="logo4">
+                <img class="logo4" src="jQuery.png" alt="logo4">
                 <p>planifier</p>
             </div>
         </article>
@@ -133,15 +133,15 @@
         <h2>Back end</h2>
         <article class="back">
             <div class="image">
-                <img class="logo5" src="/php.png" alt="logo5">
+                <img class="logo5" src="php.png" alt="logo5">
                 <p>planifier</p>
             </div>
             <div class="image">
-                <img class="logo6" src="/MariaDB.png" alt="logo6">
+                <img class="logo6" src="MariaDB.png" alt="logo6">
                 <p>planifier</p>
             </div>
             <div class="image">
-                <img class="logo7" src="/mongo.png" alt="logo3">
+                <img class="logo7" src="mongo.png" alt="logo3">
                 <p>planifier</p>
             </div>
 
@@ -150,27 +150,27 @@
         <h2>Fullstack et autre</h2>
         <article class="full">
             <div class="image">
-                <img class="logo8" src="/WordPress.png" alt="logo8">
+                <img class="logo8" src="WordPress.png" alt="logo8">
                 <p>planifier</p>
             </div>
 
             <div class="image">
-                <img class="logo9" src="/symfony.png" alt="logo9">
+                <img class="logo9" src="symfony.png" alt="logo9">
                 <p>planifier</p>
             </div>
 
             <div class="image">
-                <img class="logo10" src="/nodejs.png" alt="logo10">
+                <img class="logo10" src="nodejs.png" alt="logo10">
                 <p>planifier</p>
             </div>
 
             <div class="image">
-                <img class="logo11" src="/React.png" alt="logo11">
+                <img class="logo11" src="React.png" alt="logo11">
                 <p>planifier</p>
             </div>
 
             <div class="image">
-                <img class="logo12" src="/git.png" alt="logo12">
+                <img class="logo12" src="git.png" alt="logo12">
                 <p>planifier</p>
             </div>
     </section>
