--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 class="titre1">Contact</h1>
         <div class="flex3">
             <section class="flex1" data-aos="fade-right">
-                <img class="photo" src="/photo_BG.png" alt="photo">
+                <img class="photo" src="photo_BG.png" alt="photo">
                 <div class="presentation">
                     <p>M. CEDRIC MELOU </p>
                     <p>Tel : 06-40-73-18-76 </p>
